--- a/style.css
+++ b/style.css
@@ -16,6 +16,41 @@ font-family: 'Montserrat', sans-serif; */
     margin: 0;
 }
 
+/* Content */
+body {
+    background: var(--cream);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.container {
+    background-color: var(--white);
+    margin: 10px;
+    border-radius: 10px;
+    width: 80%;
+}
+
+img {
+    max-width: 100%;
+    max-height: auto;
+    object-fit: contain;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+h1 {
+    font-family: 'Fraunces', serif;
+}
+
+p {
+    font-family: 'Montserrat', sans-serif;
+    color: var(--dark-grayish-blue);
+}
+
+/* Footer */
 .attribution { 
     font-size: 15px; 
     text-align: center; 
