--- a/style.css
+++ b/style.css
@@ -86,6 +86,20 @@ p {
     text-decoration: line-through;
 }
 
+button {
+    background-color: var(--dark-cyan);
+    border: none;
+    color: var(--white);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    padding: 10px;
+    width: 100%;
+}
+
+.shopping-cart {
+    margin-right: 10px;
+}
+
 /* Footer */
 .attribution { 
     font-size: 15px; 
