--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ p {
     font-family: 'Montserrat', sans-serif;
     color: var(--dark-grayish-blue);
     font-size: 14px;
+    font-weight: 500;
 }
 
 .content {
