--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap');
-/* font-family: 'Fraunces', serif;
-font-family: 'Montserrat', sans-serif; */
 
 :root {
     --dark-cyan: hsl(158, 36%, 37%);
+    --darker-cyan: hsl(158, 36%, 20%);
     --cream: hsl(30, 38%, 92%);
     --dark-blue: hsl(212, 21%, 14%);
     --dark-grayish-blue: hsl(228, 12%, 48%);
@@ -14,6 +13,13 @@ font-family: 'Montserrat', sans-serif; */
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+}
+
+img,
+picture {
+  display: block;
+  max-width: 100%;
+  object-fit: cover;
 }
 
 /* Content */
@@ -31,14 +37,7 @@ body {
     border-radius: 10px;
     margin: 20px;
     width: 350px;
-}
-
-header {
-    background-image: url("./images/image-product-mobile.jpg");
-    background-size: 100%;
-    /* object-fit: contain; */
-    /* border-top-left-radius: 10px; */
-    /* border-top-right-radius: 10px; */
+    overflow: hidden;
 }
 
 main {
@@ -55,7 +54,7 @@ main {
 h1 {
     color: var(--dark-blue);
     font-family: 'Fraunces', serif;
-    line-height: 105%;
+    line-height: 1.1;
     margin-bottom: 15px;
 }
 
@@ -67,12 +66,15 @@ p {
 }
 
 .content {
-    line-height: 160%;
+    line-height: 1.7;
     margin-bottom: 25px;
 }
 
 .price {
     display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    align-items: center;
     margin-bottom: 15px;
 }
 
@@ -80,7 +82,6 @@ p {
     color: var(--dark-cyan);
     font-family: 'Fraunces', serif;
     font-size: 2rem;
-    margin-right: 20px;
 }
 
 .original-price {
@@ -92,18 +93,27 @@ button {
     border: none;
     border-radius: 5px;
     color: var(--white);
+    cursor: pointer;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     padding: 10px;
     width: 100%;
+    
+    display: inline-flex;
+    gap: 0.75rem;
+    justify-content: center;
+    align-items: center;
 }
 
-button:hover {
-    background-color: var(--dark-blue);
+button:is(:hover, :focus) {
+    background-color: var(--darker-cyan);
 }
 
-.shopping-cart {
-    margin-right: 10px;
+button[data-icon="shopping-cart"]::before {
+    content: "";
+    background-image: url("images/icon-cart.svg");
+    width: 15px;
+    height: 16px;
 }
 
 /* Footer */
@@ -116,20 +126,17 @@ button:hover {
     color: hsl(228, 45%, 44%); 
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 600px) {
 
     .container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         width: 600px;
-        overflow: auto;
+        overflow: hidden;
     }
 
-    header {
-        background-image: url("./images/image-product-desktop.jpg");
-        background-size: 100%;
+    picture {
         grid-column: 1/2;
-        object-fit: cover;
     }
 
     main {
